@@ -1,4 +1,4 @@
-MACS_VERSION = "2.0.10 20120212 (tag:alpha)"
+MACS_VERSION = "2.0.10 20120305 (tag:alpha)"
 MACSDIFF_VERSION = "1.0.4 20110212 (tag:alpha)"
 FILTERDUP_VERSION = "1.0.0 20110906"
 RANDSAMPLE_VERSION = "1.0.0 20111102"
